cambie el hashmap por un contador